--- a/web/src/components/Menu/Menu.css
+++ b/web/src/components/Menu/Menu.css
@@ -1,23 +1,28 @@
 
 .menu-wrapper{
-    width: 25%;
+    box-sizing: content-box;
+    width: auto;
     max-width: 350px;
     min-width: max-content;
-    height: fit-content;
+    height: auto;
     max-height: 35%;
     background-color: rgba(35, 35, 35, 0.6);
     position: absolute;
     top: 10px;
     right: 15px;
   }
+
   
   .menu-header{
+    box-sizing: border-box;
     height: 20%;
     width: 100%;
-    background-color: hsl(180, 55%, 46%);
+    background-color: rgb(53, 182, 182);
+    color: white;
     text-align: center;
     align-items: center;
     align-content: center;
+    padding: 10px 15px 10px 15px;
   }
 
   .menu-body{
@@ -28,15 +33,14 @@
   }
 
   .menu-item{
-    padding-left: 5px;
-    background-color: rgba(26, 31, 31, 0.811);
+    padding: 5px;
   }
 
   #h1{
     width: 100%;
     height: 50%;
     text-align: center;
-    color: rgb(26, 54, 46);
+    color: black;
 
     position: relative;
     top: 10%;
