--- a/web/src/components/Menu/Menu.css
+++ b/web/src/components/Menu/Menu.css
@@ -47,3 +47,16 @@
     bottom: 25%;
     font-size: 2.5rem;
   }
+
+  #menuInputBox{
+    min-width: fit-content;
+    width: 40%;
+    height: 1.5rem;
+    position: absolute;
+    top: 45%;
+    bottom: 45%;
+    left: 30%;
+    right: 30%;
+    background-color: rgba(35, 35, 35, 0.6);
+    color: aliceblue;
+  }
