--- a/web/src/components/Menu/Menu.css
+++ b/web/src/components/Menu/Menu.css
@@ -1,6 +1,6 @@
 
 .menu-wrapper{
-    box-sizing: content-box;
+    box-sizing: border-box;
     width: auto;
     max-width: 350px;
     min-width: max-content;
@@ -15,9 +15,9 @@
   
   .menu-header{
     box-sizing: border-box;
-    height: 20%;
+    height: 17%;
     width: 100%;
-    background-color: rgb(53, 182, 182);
+    background-color: #225252;
     color: white;
     text-align: center;
     align-items: center;
@@ -34,13 +34,15 @@
 
   .menu-item{
     padding: 5px;
+    width: auto;
+    font-family: "Noto Sans Display", sans-serif;
   }
 
   #h1{
     width: 100%;
     height: 50%;
     text-align: center;
-    color: black;
+    color: hsl(0, 0%, 100%);
 
     position: relative;
     top: 10%;
@@ -59,4 +61,9 @@
     right: 30%;
     background-color: rgba(35, 35, 35, 0.6);
     color: aliceblue;
+  }
+
+  .info{
+    position: absolute;
+    right: 5px;
   }
